- additional improvements to propositional parser and simplification of abstract syntax tree.