@@ -1,42 +1,26 @@
 package aima.core.logic.propositional.parsing;
 
-import aima.core.logic.propositional.Connective;
-import aima.core.logic.propositional.parsing.ast.BinarySentence;
-import aima.core.logic.propositional.parsing.ast.FalseSentence;
+import aima.core.logic.propositional.parsing.ast.ComplexSentence;
 import aima.core.logic.propositional.parsing.ast.Sentence;
-import aima.core.logic.propositional.parsing.ast.Symbol;
-import aima.core.logic.propositional.parsing.ast.TrueSentence;
-import aima.core.logic.propositional.parsing.ast.UnarySentence;
+import aima.core.logic.propositional.parsing.ast.PropositionSymbol;
 
 /**
  * @author Ravi Mohan
  * 
  */
 public class AbstractPLVisitor implements PLVisitor {
-	private PEParser parser = new PEParser();
 
-	public Object visitSymbol(Symbol s, Object arg) {
-		return new Symbol(s.getValue());
+	public Object visitPropositionSymbol(PropositionSymbol s, Object arg) {
+		return s;
 	}
 
-	public Object visitTrueSentence(TrueSentence ts, Object arg) {
-		return new TrueSentence();
+	public Object visitUnarySentence(ComplexSentence s, Object arg) {
+		return new ComplexSentence(s.getConnective(), (Sentence) s.get(0).accept(this, arg));
 	}
 
-	public Object visitFalseSentence(FalseSentence fs, Object arg) {
-		return new FalseSentence();
-	}
-
-	public Object visitNotSentence(UnarySentence fs, Object arg) {
-		return new UnarySentence(Connective.NOT, (Sentence) fs.getFirst().accept(this, arg));
-	}
-
-	public Object visitBinarySentence(BinarySentence fs, Object arg) {
-		return new BinarySentence(fs.getConnective(), (Sentence) fs.getFirst()
-				.accept(this, arg), (Sentence) fs.getSecond().accept(this, arg));
-	}
-
-	protected Sentence recreate(Object ast) {
-		return (Sentence) parser.parse(((Sentence) ast).toString());
+	public Object visitBinarySentence(ComplexSentence s, Object arg) {
+		return new ComplexSentence(s.getConnective(), 
+				                  (Sentence) s.get(0).accept(this, arg), 
+				                  (Sentence) s.get(1).accept(this, arg));
 	}
 }
