@@ -3,11 +3,8 @@ package aima.core.logic.propositional.visitors;
 import java.util.Set;
 
 import aima.core.logic.propositional.parsing.PLVisitor;
-import aima.core.logic.propositional.parsing.ast.BinarySentence;
-import aima.core.logic.propositional.parsing.ast.FalseSentence;
-import aima.core.logic.propositional.parsing.ast.Symbol;
-import aima.core.logic.propositional.parsing.ast.TrueSentence;
-import aima.core.logic.propositional.parsing.ast.UnarySentence;
+import aima.core.logic.propositional.parsing.ast.ComplexSentence;
+import aima.core.logic.propositional.parsing.ast.PropositionSymbol;
 import aima.core.util.SetOps;
 
 /**
@@ -19,29 +16,20 @@ import aima.core.util.SetOps;
  */
 public class BasicTraverser implements PLVisitor {
 
-	public Object visitSymbol(Symbol s, Object arg) {
-		return arg;
-	}
-
-	public Object visitTrueSentence(TrueSentence ts, Object arg) {
-		return arg;
-	}
-
-	public Object visitFalseSentence(FalseSentence fs, Object arg) {
+	public Object visitPropositionSymbol(PropositionSymbol s, Object arg) {
 		return arg;
 	}
 
 	@SuppressWarnings("unchecked")
-	public Object visitNotSentence(UnarySentence ns, Object arg) {
-		Set s = (Set) arg;
-		return SetOps.union(s, (Set) ns.getFirst().accept(this, arg));
+	public Object visitUnarySentence(ComplexSentence s, Object arg) {
+		Set set = (Set) arg;
+		return SetOps.union(set, (Set) s.get(0).accept(this, arg));
 	}
 
 	@SuppressWarnings("unchecked")
-	public Object visitBinarySentence(BinarySentence bs, Object arg) {
-		Set s = (Set) arg;
-		Set termunion = SetOps.union((Set) bs.getFirst().accept(this, arg),
-				(Set) bs.getSecond().accept(this, arg));
-		return SetOps.union(s, termunion);
+	public Object visitBinarySentence(ComplexSentence s, Object arg) {
+		Set set = (Set) arg;
+		Set termunion = SetOps.union((Set) s.get(0).accept(this, arg), (Set) s.get(1).accept(this, arg));
+		return SetOps.union(set, termunion);
 	}
 }
