@@ -1,33 +1,33 @@
 package aima.core.logic.propositional.visitors;
 
-import aima.core.logic.propositional.Connective;
 import aima.core.logic.propositional.parsing.AbstractPLVisitor;
-import aima.core.logic.propositional.parsing.ast.BinarySentence;
+import aima.core.logic.propositional.parsing.ast.ComplexSentence;
+import aima.core.logic.propositional.parsing.ast.Connective;
 import aima.core.logic.propositional.parsing.ast.Sentence;
-import aima.core.logic.propositional.parsing.ast.UnarySentence;
 
 /**
  * @author Ravi Mohan
  * @author Mike Stampone
  */
 public class CNFTransformer extends AbstractPLVisitor {
+	
 	@Override
-	public Object visitBinarySentence(BinarySentence bs, Object arg) {
-		if (bs.isBiconditional()) {
+	public Object visitUnarySentence(ComplexSentence us, Object arg) {
+		return transformNotSentence(us);
+	}
+	
+	@Override
+	public Object visitBinarySentence(ComplexSentence bs, Object arg) {
+		if (bs.getConnective() == Connective.BICONDITIONAL) {
 			return transformBiConditionalSentence(bs);
-		} else if (bs.isImplication()) {
+		} else if (bs.getConnective() == Connective.IMPLICATION) {
 			return transformImpliedSentence(bs);
-		} else if (bs.isOrSentence()
-				&& (bs.firstTermIsAndSentence() || bs.secondTermIsAndSentence())) {
+		} else if (bs.getConnective() == Connective.OR
+				&& (isAndSentence(bs.get(0)) || isAndSentence(bs.get(1)))) {
 			return distributeOrOverAnd(bs);
 		} else {
 			return super.visitBinarySentence(bs, arg);
 		}
-	}
-
-	@Override
-	public Object visitNotSentence(UnarySentence us, Object arg) {
-		return transformNotSentence(us);
 	}
 
 	/**
@@ -46,65 +46,98 @@ public class CNFTransformer extends AbstractPLVisitor {
 
 		return toTransform;
 	}
+	
+	//
+	// PRIVATE
+	//
+	private boolean isAndSentence(Sentence s) {
+		boolean result = false;
+		if (s instanceof ComplexSentence) {
+			result = ((ComplexSentence)s).getConnective() == Connective.AND;
+		}
+		return result;
+	}
+	
+	private boolean isOrSentence(Sentence s) {
+		boolean result = false;
+		if (s instanceof ComplexSentence) {
+			result = ((ComplexSentence)s).getConnective() == Connective.OR;
+		}
+		return result;
+	}
+	
+	private boolean isUnarySentence(Sentence s) {
+		boolean result = false;
+		if (s instanceof ComplexSentence) {
+			result = ((ComplexSentence)s).isUnary();
+		}
+		return result;
+	}
+	
+	private boolean isBinarySentence(Sentence s) {
+		boolean result = false;
+		if (s instanceof ComplexSentence) {
+			result = ((ComplexSentence)s).isBinary();
+		}
+		return result;
+	}
 
 	private Sentence step(Sentence s) {
 		return (Sentence) s.accept(this, null);
 	}
 
-	private Sentence transformBiConditionalSentence(BinarySentence bs) {
-		Sentence first = new BinarySentence(Connective.IMPLICATION, (Sentence) bs.getFirst()
-				.accept(this, null), (Sentence) bs.getSecond().accept(this,
+	private Sentence transformBiConditionalSentence(ComplexSentence bs) {
+		Sentence first = new ComplexSentence(Connective.IMPLICATION, (Sentence) bs.get(0)
+				.accept(this, null), (Sentence) bs.get(1).accept(this,
 				null));
-		Sentence second = new BinarySentence(Connective.IMPLICATION, (Sentence) bs.getSecond()
-				.accept(this, null), (Sentence) bs.getFirst()
+		Sentence second = new ComplexSentence(Connective.IMPLICATION, (Sentence) bs.get(1)
+				.accept(this, null), (Sentence) bs.get(0)
 				.accept(this, null));
-		return new BinarySentence(Connective.AND, first, second);
+		return new ComplexSentence(Connective.AND, first, second);
 	}
 
-	private Sentence transformImpliedSentence(BinarySentence bs) {
-		Sentence first = new UnarySentence(Connective.NOT, (Sentence) bs.getFirst().accept(
+	private Sentence transformImpliedSentence(ComplexSentence bs) {
+		Sentence first = new ComplexSentence(Connective.NOT, (Sentence) bs.get(0).accept(
 				this, null));
-		return new BinarySentence(Connective.OR, first, (Sentence) bs.getSecond()
-				.accept(this, null));
+		return new ComplexSentence(Connective.OR, first, (Sentence) bs.get(1).accept(this, null));
 	}
 
-	private Sentence transformNotSentence(UnarySentence us) {
-		if (us.getFirst() instanceof UnarySentence) {
-			return (Sentence) ((UnarySentence) us.getFirst()).getFirst()
-					.accept(this, null);
-		} else if (us.getFirst() instanceof BinarySentence) {
-			BinarySentence bs = (BinarySentence) us.getFirst();
-			if (bs.isAndSentence()) {
-				Sentence first = new UnarySentence(Connective.NOT, (Sentence) bs.getFirst()
+	private Sentence transformNotSentence(ComplexSentence us) {
+		if (isUnarySentence(us.get(0))) {
+			return (Sentence) ((ComplexSentence) us.get(0)).get(0).accept(this, null);
+		} else if (isBinarySentence(us.get(0))) {
+			ComplexSentence bs = (ComplexSentence) us.get(0);
+			if (isAndSentence(bs)) {
+				Sentence first = new ComplexSentence(Connective.NOT, (Sentence) bs.get(0)
 						.accept(this, null));
-				Sentence second = new UnarySentence(Connective.NOT, (Sentence) bs.getSecond()
+				Sentence second = new ComplexSentence(Connective.NOT, (Sentence) bs.get(1)
 						.accept(this, null));
-				return new BinarySentence(Connective.OR, first, second);
-			} else if (bs.isOrSentence()) {
-				Sentence first = new UnarySentence(Connective.NOT, (Sentence) bs.getFirst()
+				return new ComplexSentence(Connective.OR, first, second);
+			} else if (isOrSentence(bs)) {
+				Sentence first = new ComplexSentence(Connective.NOT, (Sentence) bs.get(0)
 						.accept(this, null));
-				Sentence second = new UnarySentence(Connective.NOT, (Sentence) bs.getSecond()
+				Sentence second = new ComplexSentence(Connective.NOT, (Sentence) bs.get(1)
 						.accept(this, null));
-				return new BinarySentence(Connective.AND, first, second);
+				return new ComplexSentence(Connective.AND, first, second);
 			} else {
-				return (Sentence) super.visitNotSentence(us, null);
+				return (Sentence) super.visitUnarySentence(us, null);
 			}
 		} else {
-			return (Sentence) super.visitNotSentence(us, null);
+			return (Sentence) super.visitUnarySentence(us, null);
 		}
 	}
 
-	private Sentence distributeOrOverAnd(BinarySentence bs) {
-		BinarySentence andTerm = bs.firstTermIsAndSentence() ? (BinarySentence) bs
-				.getFirst() : (BinarySentence) bs.getSecond();
-		Sentence otherterm = bs.firstTermIsAndSentence() ? bs.getSecond() : bs
-				.getFirst();
+	private Sentence distributeOrOverAnd(ComplexSentence bs) {
+		ComplexSentence andTerm = isAndSentence(bs.get(0)) ? (ComplexSentence) bs
+				.get(0) : (ComplexSentence) bs.get(1);
+		Sentence otherterm = isAndSentence(bs.get(0)) ? bs.get(1) : bs
+				.get(0);
 		// (alpha or (beta and gamma) = ((alpha or beta) and (alpha or gamma))
 		Sentence alpha = (Sentence) otherterm.accept(this, null);
-		Sentence beta = (Sentence) andTerm.getFirst().accept(this, null);
-		Sentence gamma = (Sentence) andTerm.getSecond().accept(this, null);
-		Sentence distributed = new BinarySentence(Connective.AND, new BinarySentence(
-				Connective.OR, alpha, beta), new BinarySentence(Connective.OR, alpha, gamma));
+		Sentence beta = (Sentence) andTerm.get(0).accept(this, null);
+		Sentence gamma = (Sentence) andTerm.get(1).accept(this, null);
+		Sentence distributed = new ComplexSentence(Connective.AND, new ComplexSentence(
+				Connective.OR, alpha, beta), new ComplexSentence(Connective.OR, alpha, gamma));
 		return distributed;
 	}
 }
